Fix newsletter-item media spacing.

--- a/themes/drutact_bootstrap/less/drutact_node.less
+++ b/themes/drutact_bootstrap/less/drutact_node.less
@@ -50,3 +50,8 @@ ul.links {
 .field-label i.fa {
   color: @gray-light;
 }
+
+// Newsletter item spacing
+.field-name-field-newsletter-items .media {
+  margin-top: 20px;
+}
